fixing
1.Fixed horizontal scrolling
2.menu transparent

--- a/css/app.css
+++ b/css/app.css
@@ -9786,7 +9786,8 @@ body {
   padding: 0;
   font-size: 20px;
   font-family: "Lato", sans-serif;
-  text-rendering: optimizeLegibility; }
+  text-rendering: optimizeLegibility;
+  overflow-x: hidden; }
 
 a {
   text-decoration: none; }
@@ -9977,7 +9978,10 @@ h3 {
 
 .navbar-inverse {
   border: none;
-  background: rgba(0, 0, 0, 0.25); }
+  background: transparent; }
+
+.navbar-fixed-top {
+  top: 10px; }
 
 .navbar-inverse ul li a {
   font-size: 80%;
@@ -9990,7 +9994,8 @@ h3 {
 
 .nav-solid {
   background: #2b2b2b;
-  z-index: 9999; }
+  z-index: 9999;
+  top: 0; }
 
 .nav-transparent {
   background: rgba(0, 0, 0, 0.45); }
